--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <div class="brag-subtext">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</div>
                 <div class="button">Sign up</div>
             </div>
-            <div class="brag-image"></div>
+            <div class="brag-image"><img src="images/merlin_188486415_c93c99d1-7585-47c6-9be1-2af2c7693dc9-superJumbo.jpg"></div>
 
         </div> 
         
