--- a/index.html
+++ b/index.html
@@ -35,25 +35,25 @@
             <div class="info-cards">
                 
                 <div class="card-one">
-                    <div class="info-image"></div>
+                    <div class="info-image"><img src="images/merlin_188486415_c93c99d1-7585-47c6-9be1-2af2c7693dc9-superJumbo.jpg" class="rounded-corners"></div>
                     <div class="info-text"> this is some subtext under 
                         an illustration or image</div>
                 </div>
 
                 <div class="card-two">
-                    <div class="info-image"></div>
+                    <div class="info-image"><img src="images/merlin_188486415_c93c99d1-7585-47c6-9be1-2af2c7693dc9-superJumbo.jpg" class="rounded-corners"></div>
                     <div class="info-text">this is some subtext under
                          an illustration or image</div>
                 </div>
 
                 <div class="card-three">
-                    <div class="info-image"></div>
+                    <div class="info-image"><img src="images/merlin_188486415_c93c99d1-7585-47c6-9be1-2af2c7693dc9-superJumbo.jpg" class="rounded-corners"></div>
                     <div class="info-text">this is some subtext under 
                         an illustration or image</div>
                 </div>
 
                 <div class="card-four">
-                    <div class="info-image"></div>
+                    <div class="info-image"><img src="images/merlin_188486415_c93c99d1-7585-47c6-9be1-2af2c7693dc9-superJumbo.jpg" class="rounded-corners"></div>
                     <div class="info-text">this is some subtext under 
                         an illustration or image</div>
                 </div>
@@ -63,9 +63,9 @@
         </div>
 
         <div class="quote">
-            <div class="quote-text">This is an inspiring quote, or a testemonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. 
+            <div class="quote-text">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. 
                 Who knows? All I know is that it looks nice.</div>
-            <div class="attrubution">Thor-God of Thunder</div>
+            <div class="attribution">- Thor, God of Thunder</div>
 
 
         </div>
@@ -76,7 +76,7 @@
                 <div class="action-subtext">Sign up for our product by clicking that button over there!</div>
             </div>
 
-            <div class="button">Sign up</div>
+            <div class="second-button">Sign up</div>
 
 
         </div>
